# src/routes/employee.routes.js
@@ -1,0 +1,8 @@
+const express = require('express');
+const router = express.Router();
+const employee = require('../controllers/employee.controller');
+
+router.post('/', employee.save);
+router.get('/', employee.findAll);
+
+module.exports = router;
